[gd_scene load_steps=6 format=3 uid="uid://dn2wuuctgmm0p"]

[ext_resource type="Script" path="res://sources/ui/hud/hud.gd" id="1_8hw37"]
[ext_resource type="Texture2D" uid="uid://spx2g8nndd5j" path="res://sources/ui/hud/crosshair.png" id="2_8uvef"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_tm8rj"]
color = Color(0, 0, 0, 0.784314)
thickness = 45

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kqwg5"]
bg_color = Color(1, 0.57572, 0.537458, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdhxu"]
bg_color = Color(1.34766e-06, 0.865405, 0.975258, 1)

[node name="Hud" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200
script = ExtResource("1_8hw37")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ReferenceRect" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CrossHairAndStats" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="WeaponCooldownBar" type="ProgressBar" parent="HBoxContainer/CrossHairAndStats"]
clip_contents = true
custom_minimum_size = Vector2(6, 45)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxLine_tm8rj")
theme_override_styles/fill = SubResource("StyleBoxFlat_kqwg5")
step = 0.1
fill_mode = 3
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CrossHairAndStats"]
layout_mode = 2
texture = ExtResource("2_8uvef")
stretch_mode = 3

[node name="SkillCooldownBar" type="ProgressBar" parent="HBoxContainer/CrossHairAndStats"]
clip_contents = true
custom_minimum_size = Vector2(6, 45)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxLine_tm8rj")
theme_override_styles/fill = SubResource("StyleBoxFlat_sdhxu")
step = 0.1
value = 100.0
fill_mode = 3
show_percentage = false

[node name="ReferenceRect3" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
